# AIorHuman

./: .dockerignore  README.md  analyze.py  basic_auth.ini  deploy.sh  deploy_remote.sh  docker-compose.yml  experiments.py  fit_predict.py  get_data.py  init.py  long_task.py  promote_best.py  pyproject.toml  upload.py
data/: .gitignore
inference_service/: Dockerfile  app.py  model.py  requirements.txt  schemas.py
mlflow5/: Dockerfile
mlruns/0/: meta.yaml
mlruns/548219124429437588/: meta.yaml
mlruns/548219124429437588/1015951eaeb94ebd99d326c80764da7b/: meta.yaml
mlruns/548219124429437588/1b282ff904754459ae1209da42e29e8b/: meta.yaml
mlruns/548219124429437588/23f76c2e0d774136ab54c8f99a8c5ba2/: meta.yaml
mlruns/548219124429437588/2589eb206077440f92e2d8d000d5cb57/: meta.yaml
mlruns/548219124429437588/393a592cc9ab48959b393a71a9cd5648/: meta.yaml
mlruns/548219124429437588/3b34847248754f278a5c4a7ff2b2561d/: meta.yaml
mlruns/548219124429437588/45a715aef9624eb6a47eadd07e910c11/: meta.yaml
mlruns/548219124429437588/48ced85312dd4aed9d4260e62e8c586a/: meta.yaml
mlruns/548219124429437588/5762f68f13524e44bd4e877cc78f6244/: meta.yaml
mlruns/548219124429437588/5bfc66b669d64f3ebb2a914bbde38143/: meta.yaml
mlruns/548219124429437588/69f57fafe1c2413eb43c8a663aa82438/: meta.yaml
mlruns/548219124429437588/8238419ff98d4d068f2115a20f5e6cad/: meta.yaml
tests/: inference_requests.txt  inference_responses.txt  sample_dialog.json  test_champion_model.py
youarebot/: Dockerfile  config.py  database.py  main.py  model_inference.py  requirements.txt  security.py
(+535 files in other folders)
