[project]
name = "week3-homework"
version = "1.0.0"
description = "Repo for Week 2 and Week 3 lessons of the Production ML course at Central University."
readme = "README.md"
requires-python = ">=3.12,<3.14"

authors = [
  { name = "Anton Gavrilov", email = "a.gavrilov@centraluniversity.ru" },
]

# Объединённые зависимости (детерминированные пины там, где важно)
dependencies = [
  # web/api
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "httpx>=0.27.0",
  "python-dotenv==1.1.1",

  # ml / data
  "scikit-learn",
  "joblib",
  "mlflow",

  # storage / db / drivers
  "psycopg2-binary==2.9.10",
  "sqlalchemy",
  "boto3>=1.34",
  "minio",
  "pymongo>=4.6",
  "clickhouse-driver>=0.2",

  # df/compute
  "pandas>=2.2",
  "polars>=1.7",
  "duckdb>=1.0",
  "numpy",
  "pyarrow",

  # utils
  "requests",
  "pynvml",
]

[project.optional-dependencies]
dev = [
  "ruff==0.12.11",
  "mypy==1.17.1",
  "pre-commit==4.3.0",
]

[tool.uv]
package = false

[dependency-groups]
fireducks = ["fireducks"]
